# opencv_study

./: main.cpp
task1/: CMakeLists.txt  README.md  main.cpp
task2/: CMakeLists.txt  README.md  main.cpp
task3/: README.md  main.cpp
task4/: README.md  main.cpp
task5/: CMakeLists.txt  README.md  main.cpp
task6/: README.md  main.cpp
task7/: README.md  main.cpp
task8/: README.md  main.cpp
task9/: README.md  main.cpp
